# tech-agentes

./: .cursorrules  .gitignore  .gitmessage  CHANGELOG.md  README.md  pyproject.toml
agents/: README.md  contexto_requisitos.md  eng_software_arquiteto_ia_devops.md  engenharia_prompt.md  observabilidade_custos.md  orquestrador.md  qualidade_auditoria_testes.md  seguranca_compliance.md
agents/specialists/: README.md
configs/: README.md  ambientes.json  modelos.json  projeto.json
dados/: data_contracts.md
dashboards/: requisitos_kpis.md
devops/: GIT_SETUP.md  mcp_supabase.md  pipelines.yaml  runbooks.md
devops/infra/: README.md
docs/brief/: brief_atual.md
docs/dados/: data_contracts.md
docs/modelos/: guia_modelos.md
docs/padrões/: padroes_projeto.md  versionamento.md
evals/: README.md  golden_sets.json  rubricas.json
evals/resultados/: 2026-01-18_00-00-00_dev.json  2026-01-18_06-42-35_dev.json  2026-01-18_06-43-35_dev.json  README.md  latest_dev.json
integrations/: README.md  espaider_api.md  inventario_sistemas.json  mapeamentos_schemas.json  specs_endpoints.md  tarefas_sync.md
integrations/openapi/: README.md  example.yaml
logs/: .gitkeep
observability/: README.md  alertas.json  dashboards.json  relatorios_periodicos.md
padrões/: versionamento.md
prompts/: README.md  templates_analise.md  templates_decisao.md  templates_extracao.md  templates_geracao.md
seguranca/: assessment_mvp.md  politicas.md
templates/: README.md
tools/: bootstrap_scaffold.py
workflows/: README.md  backlog_tarefas.json  plano_execucao.json
(+58 files in other folders)
