[project]
name = "tech-agentes"
version = "0.1.0"
description = "Base padrão multiagentes (Cursor + AI) com CLI instalador, schemas e templates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "CTO" }]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.4",
  "mypy>=1.10.0",
  "pytest>=8.2.2",
]

[project.scripts]
tech-agents = "tech_agents.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

